Update project descriptions and badges for clarity and improved focus areas

--- a/projects.html
+++ b/projects.html
@@ -87,13 +87,13 @@
                             </div>
                             <div class="mb-3">
                                 <span class="badge bg-primary me-2">MIUR - PRIN 2022 PNRR</span>
-                                <span class="badge bg-secondary">Unit Leader</span>
+                                <span class="badge bg-warning text-dark">Unit Leader</span>
                             </div>
-                            <p class="card-text">RECHARGE is a novel automated framework for automating performance
-                                testing in CI/CD pipelines leveraging static analysis and search-based algorithms.</p>
+                            <p class="card-text">RECHARGE is an automated framework for performance
+                                testing in CI/CD pipelines that leverages static analysis and search-based algorithms.</p>
                             <div class="mt-auto">
-                                <small class="text-muted">Focus: Performance Testing, CI/CD, Search-based
-                                    Algorithms</small>
+                                <small class="text-muted">Focus: Performance Testing, CI/CD, LLMs, Search-based
+                                    Algorithms, Quantum Computing</small>
                             </div>
                         </div>
                     </div>
@@ -106,13 +106,13 @@
                             </div>
                             <div class="mb-3">
                                 <span class="badge bg-primary me-2">MIUR - PRIN 2022</span>
-                                <span class="badge bg-success">Principal Investigator</span>
+                                <span class="badge bg-warning text-dark">Principal Investigator</span>
                             </div>
                             <p class="card-text">SMARTITUDE aims to provide a comprehensive set of software engineering
-                                methods and tools to improve the blockchain smart contract quality assurance by
+                                methods and tools to improve quality assurance for blockchain smart contracts by
                                 leveraging automated test case generation and formal methods.</p>
                             <div class="mt-auto">
-                                <small class="text-muted">Focus: Blockchain, Smart Contracts, DeFi, Testing</small>
+                                <small class="text-muted">Focus: Blockchain, Smart Contracts, DeFi, Security Testing</small>
                             </div>
                         </div>
                     </div>
@@ -135,8 +135,8 @@
                                 <span class="badge bg-primary me-2">EU Horizon 2020</span>
                                 <span class="badge bg-warning text-dark">Work Package Leader</span>
                             </div>
-                            <p class="card-text">RADON aimed at creating a DevOps framework to create and manage
-                                microservices-based applications that can optimally exploit serverless computing
+                            <p class="card-text">RADON aimed to create a DevOps framework to manage
+                                microservices-based applications that optimally exploit serverless computing
                                 technologies and FaaS.</p>
                             <div class="mt-auto">
                                 <small class="text-muted">Focus: Serverless, Microservices, DevOps</small>
@@ -154,9 +154,9 @@
                                 <span class="badge bg-primary me-2">FRS-FNRS & FWO</span>
                                 <span class="badge bg-warning text-dark">Work Package Leader</span>
                             </div>
-                            <p class="card-text">SECO-ASSIST was an Excellence of Science Project providing novel
+                            <p class="card-text">SECO-ASSIST was an Excellence of Science project that provided novel
                                 software recommendation techniques for software ecosystems, addressing resilience,
-                                evolvability, heterogeneity, and social interaction.</p>
+                                evolvability, heterogeneity, and social interactions.</p>
                             <div class="mt-auto">
                                 <small class="text-muted">Focus: Software Ecosystems, Recommendations, Social
                                     Networks</small>
@@ -176,7 +176,7 @@
                             </div>
                             <p class="card-text">INTIMALS was an Innoviris project that developed an intelligent
                                 assistant to recommend source code modernization actions by mining patterns from legacy
-                                software repositories. It continuously learned from code structure and changes to
+                                software repositories. It learned from code structure and changes to
                                 improve its recommendations through advanced pattern mining algorithms.</p>
                             <div class="mt-auto">
                                 <small class="text-muted">Focus: Pattern Mining, Software Modernization, Intelligent
@@ -201,13 +201,12 @@
                                         class="btn-modern btn-sm">Source</a>
                             </div>
                             <div class="mb-3">
-                                <span class="badge bg-primary me-2">Mutation Testing</span>
+                                <span class="badge bg-primary me-2">Vulnerability Injection for Smart Contracts</span>
                                 <span class="badge bg-secondary">GPL v3.0</span>
                             </div>
                             <p class="card-text">MuSe is a mutation-based tool for generating benchmarks by injecting
-                                vulnerabilities into smart contracts. It features six mutation operators to inject
-                                vulnerabilities. Based on SuMo, designed to run mutation testing on Solidity projects in
-                                a NodeJS environment.</p>
+                                vulnerabilities into smart contracts. It features six mutation operators. It is based on SuMo and designed to run mutation testing on Solidity projects in
+                                a Node.js environment.</p>
                             <div class="mt-auto">
                                 <small class="text-muted">Focus: Smart Contracts, Vulnerabilities, Solidity</small>
                             </div>
@@ -229,9 +228,9 @@
                                 <span class="badge bg-primary me-2">AI-enabled JMH</span>
                                 <span class="badge bg-secondary">MIT License</span>
                             </div>
-                            <p class="card-text">AMBER is an AI-enabled extension of JMH that leverages Time Series
-                                Classification algorithms to predict the beginning of the steady-state phase at run-time
-                                and dynamically halt warm-up iterations accordingly.</p>
+                            <p class="card-text">AMBER is an AI-enabled extension of JMH that leverages time-series
+                                classification algorithms to predict the beginning of the steady-state phase at runtime
+                                and dynamically stop warm-up iterations accordingly.</p>
                             <div class="mt-auto">
                                 <small class="text-muted">Focus: Performance Testing, Machine Learning, JMH</small>
                             </div>
@@ -252,12 +251,12 @@
                                 </div>
                             </div>
                             <div class="mb-3">
-                                <span class="badge bg-primary me-2">Infrastructure-as-Code</span>
+                                <span class="badge bg-primary me-2">Infrastructure-as-Code Defect Prediction</span>
                                 <span class="badge bg-secondary">Apache 2.0</span>
                             </div>
                             <p class="card-text">Defuse automatically collects and classifies failure data, enables the
                                 correction of those classifications, and builds machine learning models to detect
-                                defects based on those data. Instantiated for Infrastructure-as-Code DevOps practice.
+                                defects from these data. It was instantiated for Infrastructure-as-Code (IaC) DevOps practices.
                             </p>
                             <div class="mt-auto">
                                 <small class="text-muted">Focus: DevOps, Machine Learning, IaC</small>
@@ -277,12 +276,12 @@
                                 </div>
                             </div>
                             <div class="mb-3">
-                                <span class="badge bg-primary me-2">Language-agnostic</span>
+                                <span class="badge bg-primary me-2">Language-agnostic Miner</span>
                                 <span class="badge bg-secondary">Apache 2.0</span>
                             </div>
-                            <p class="card-text">RepoMiner is a language-agnostic tool developed to support software
-                                engineering researchers in creating datasets to support any study on defect prediction.
-                                Automatically collects failure data and calculates metrics.</p>
+                            <p class="card-text">RepoMiner is a language-agnostic tool developed to help software
+                                engineering researchers create datasets for defect prediction studies.
+                                It automatically collects failure data and computes metrics.</p>
                             <div class="mt-auto">
                                 <small class="text-muted">Focus: Defect Prediction, Research, Datasets</small>
                             </div>
@@ -303,11 +302,11 @@
                                 </div>
                             </div>
                             <div class="mb-3">
-                                <span class="badge bg-primary me-2">Python-based</span>
+                                <span class="badge bg-primary me-2">Infrastructure-as-Code Metric Collector</span>
                                 <span class="badge bg-secondary">Apache 2.0</span>
                             </div>
-                            <p class="card-text">AnsibleMetrics is a Python-based static source code measurement tool to
-                                characterize Infrastructure-as-Code. It analyzes Ansible projects, but it could be
+                            <p class="card-text">AnsibleMetrics is a Python-based static source code measurement tool for
+                                characterizing Infrastructure-as-Code (IaC). It analyzes Ansible projects and can be
                                 easily extended to support additional formats.</p>
                             <div class="mt-auto">
                                 <small class="text-muted">Focus: Infrastructure-as-Code, DevOps, Quality</small>
@@ -323,10 +322,10 @@
                                     class="btn-modern btn-sm">Source</a>
                             </div>
                             <div class="mb-3">
-                                <span class="badge bg-primary me-2">IntelliJ Plugin</span>
+                                <span class="badge bg-primary me-2">IntelliJ Plugin for Scala Test Smells</span>
                                 <span class="badge bg-secondary">MIT License</span>
                             </div>
-                            <p class="card-text">SoCRATES is an IntelliJ IDEA plugin to detect test smells in Scala/SBT
+                            <p class="card-text">SoCRATES is an IntelliJ IDEA plugin that detects test smells in Scala/SBT
                                 projects. It automatically detects and reports on six test smells including four
                                 variants of General Fixture.</p>
                             <div class="mt-auto">
@@ -351,7 +350,7 @@
                                 </div>
                             </div>
                             <div class="mb-3">
-                                <span class="badge bg-primary me-2">Android Energy</span>
+                                <span class="badge bg-primary me-2">Energy Smell Detector</span>
                                 <span class="badge bg-secondary">MIT License</span>
                             </div>
                             <p class="card-text">aDoctor is an IntelliJ IDEA plugin to detect and refactor five
@@ -375,11 +374,11 @@
                                 </div>
                             </div>
                             <div class="mb-3">
-                                <span class="badge bg-primary me-2">Energy Estimation</span>
-                                <span class="badge bg-secondary">Android</span>
+                                <span class="badge bg-primary me-2">Android Energy Estimator</span>
+                                <span class="badge bg-secondary">MIT License</span>
                             </div>
-                            <p class="card-text">PETrA is a software able to estimate the energy consumption of method
-                                calls in Android apps. It is based on Android tools including Monkey, Batterystats,
+                            <p class="card-text">PETrA is a tool that estimates the energy consumption of method
+                                calls in Android apps. It is based on Android tools, including Monkey, Batterystats,
                                 Systrace, and dmtracedump.</p>
                             <div class="mt-auto">
                                 <small class="text-muted">Focus: Android, Energy Consumption, Performance</small>
@@ -396,8 +395,8 @@
                                 <a href="https://zenodo.org/records/6080422" target="_blank" rel="noopener noreferrer" class="btn-modern btn-sm">Dataset</a>
                             </div>
                             <div class="mb-3">
-                                <span class="badge bg-primary me-2">Research Dataset</span>
-                                <span class="badge bg-secondary">Code Smells</span>
+                                <span class="badge bg-primary me-2">Code Smell Dataset</span>
+                                <span class="badge bg-secondary">CC BY 4.0</span>
                             </div>
                             <p class="card-text">Landfill is a comprehensive code smell dataset for empirical software
                                 engineering research and code quality analysis.</p>
@@ -421,12 +420,8 @@
                                 <h4 class="card-title mb-0">GNOME Maps</h4>
                                 <a href="https://wiki.gnome.org/Apps/Maps" target="_blank" rel="noopener noreferrer" class="btn-modern btn-sm">Project</a>
                             </div>
-                            <div class="mb-3">
-                                <span class="badge bg-primary me-2">GNOME</span>
-                                <span class="badge bg-secondary">Contributor</span>
-                            </div>
-                            <p class="card-text">Map application for GNOME desktop environment, providing location
-                                services and navigation functionality for Linux users.</p>
+                            <p class="card-text">Mapping application for the GNOME desktop environment, providing location
+                                services and navigation for Linux users.</p>
                             <div class="mt-auto">
                                 <small class="text-muted">Tech: GTK, JavaScript, GIS</small>
                             </div>
@@ -439,12 +434,8 @@
                                 <h4 class="card-title mb-0">GraphHopper</h4>
                                 <a href="https://graphhopper.com" target="_blank" rel="noopener noreferrer" class="btn-modern btn-sm">Project</a>
                             </div>
-                            <div class="mb-3">
-                                <span class="badge bg-primary me-2">Routing Engine</span>
-                                <span class="badge bg-secondary">Contributor</span>
-                            </div>
-                            <p class="card-text">Memory efficient routing algorithms in Java for graph-based navigation.
-                                Includes Dijkstra, A*, and optimized road routing with Contraction Hierarchies.</p>
+                            <p class="card-text">Memory-efficient routing algorithms in Java for graph-based navigation.
+                                Includes Dijkstra's algorithm, A*, and optimized road routing with Contraction Hierarchies.</p>
                             <div class="mt-auto">
                                 <small class="text-muted">Tech: Java, Algorithms, Apache License</small>
                             </div>
