Enhance visibility of conference role by adding styling to the 51st Euromicro Conference on Software Engineering and Advanced Applications (SEAA 2025) and Finance Chair entries in services.html.

--- a/services.html
+++ b/services.html
@@ -74,8 +74,8 @@
                     <h3 class="mb-4 gradient-text">Organizing Committee Member of SE Events</h3>
                     
                     <div class="service-item">
-                        <span class="small">51st Euromicro Conference on Software Engineering and Advanced Applications (SEAA 2025)</span>
-                        <span class="small">Finance Chair</span>
+                        <span class="small"><span style="color: #e67e22; font-weight: 600;">51st Euromicro Conference on Software Engineering and Advanced Applications (SEAA 2025)</span></span>
+                        <span class="small"><span style="color: #e67e22; font-weight: 600;">Finance Chair</span></span>
                     </div>
 
                     <div class="service-item">
