Add footer with copyright information and MIT license link to multiple HTML files

--- a/index.html
+++ b/index.html
@@ -211,6 +211,20 @@
 
     </div>
 
+    <!-- Footer -->
+    <footer class="border-top py-4 mt-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <p class="text-muted mb-0">
+                        © 2024-2025 Dario Di Nucci. Licensed under the 
+                        <a href="LICENSE" class="text-decoration-none text-primary">MIT License</a>.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
     <!-- Core JavaScript -->
     <!-- Bootstrap v5 Bundle (no jQuery dependency) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
