Update project focus and technology descriptions for clarity

--- a/projects.html
+++ b/projects.html
@@ -158,8 +158,7 @@
                                 software recommendation techniques for software ecosystems, addressing resilience,
                                 evolvability, heterogeneity, and social interactions.</p>
                             <div class="mt-auto">
-                                <small class="text-muted">Focus: Software Ecosystems, Recommendations, Social
-                                    Networks</small>
+                                <small class="text-muted">Focus: Software Ecosystems, Recommendations, Mining Software Repositories</small>
                             </div>
                         </div>
                     </div>
@@ -423,7 +422,7 @@
                             <p class="card-text">Mapping application for the GNOME desktop environment, providing location
                                 services and navigation for Linux users.</p>
                             <div class="mt-auto">
-                                <small class="text-muted">Tech: GTK, JavaScript, GIS</small>
+                                <small class="text-muted">Tech: GTK, JavaScript</small>
                             </div>
                         </div>
                     </div>
@@ -437,7 +436,7 @@
                             <p class="card-text">Memory-efficient routing algorithms in Java for graph-based navigation.
                                 Includes Dijkstra's algorithm, A*, and optimized road routing with Contraction Hierarchies.</p>
                             <div class="mt-auto">
-                                <small class="text-muted">Tech: Java, Algorithms, Apache License</small>
+                                <small class="text-muted">Tech: Java, Algorithms</small>
                             </div>
                         </div>
                     </div>
