Add target and rel attributes to MIT License links for improved security

--- a/teaching.html
+++ b/teaching.html
@@ -231,7 +231,7 @@
                 <div class="col-12 text-center">
                     <p class="text-muted mb-0">
                         © 2024-2025 Dario Di Nucci. Licensed under the 
-                        <a href="LICENSE" class="text-decoration-none text-primary">MIT License</a>.
+                        <a href="LICENSE" class="text-decoration-none text-primary" target="_blank" rel="noopener">MIT License</a>.
                     </p>
                 </div>
             </div>
