--- a/teaching.html
+++ b/teaching.html
@@ -230,8 +230,7 @@
             <div class="row">
                 <div class="col-12 text-center">
                     <p class="text-muted mb-0">
-                        © 2024-2025 Dario Di Nucci. Licensed under the 
-                        <a href="LICENSE" class="text-decoration-none text-primary" target="_blank" rel="noopener">MIT License</a>.
+                        © <span id="current-year"></span> Dario Di Nucci
                     </p>
                 </div>
             </div>
@@ -244,6 +243,16 @@
 
     <!-- Custom scripts for this template -->
     <script src="js/modern-interactions.min.js?v=20250808" defer></script>
+
+    <!-- Set current year -->
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const yearElement = document.getElementById('current-year');
+            if (yearElement) {
+                yearElement.textContent = new Date().getFullYear();
+            }
+        });
+    </script>
 
 </body>
 
