--- a/publications.html
+++ b/publications.html
@@ -23,7 +23,7 @@
 
 </head>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
         <div class="container-fluid">
@@ -65,8 +65,8 @@
         </span>
     </nav>
 
-    <div class="container-fluid p-0">
-    <section class="resume-section p-3 p-lg-5 d-flex flex-column">
+    <div class="container-fluid p-0 flex-grow-1">
+    <section class="resume-section p-3 p-lg-5 d-flex flex-column h-100">
             <div class="my-auto fade-in-up">
                 <div class="modern-card mb-4">
                     <h3 class="gradient-text">Publications</h3>
@@ -107,7 +107,7 @@
     </div>
 
     <!-- Footer -->
-    <footer class="border-top py-4 mt-5">
+    <footer class="border-top py-4 mt-auto">
         <div class="container">
             <div class="row">
                 <div class="col-12 text-center">
