Update license type from MIT to GPL v2.0 for AI-enabled JMH project

--- a/projects.html
+++ b/projects.html
@@ -225,7 +225,7 @@
                             </div>
                             <div class="mb-3">
                                 <span class="badge bg-primary me-2">AI-enabled JMH</span>
-                                <span class="badge bg-secondary">MIT License</span>
+                                <span class="badge bg-secondary">GPL v2.0</span>
                             </div>
                             <p class="card-text">AMBER is an AI-enabled extension of JMH that leverages time-series
                                 classification algorithms to predict the beginning of the steady-state phase at runtime
