Highlight upcoming course term by changing text style for Winter 2025

--- a/teaching.html
+++ b/teaching.html
@@ -145,7 +145,7 @@
                                 <p class="mb-1 text-muted small">PhD in Computer Science • University of Salerno</p>
                             </div>
                             <div class="text-end">
-                                <span class="small text-muted">Winter 2025</span><br>
+                                <span class="small" style="color: #e67e22; font-weight: 600;">Winter 2025</span><br>
                                 <span class="small text-muted">Winter 2024</span><br>
                                 <span class="small text-muted">Winter 2023</span>
                             </div>
