--- a/services.html
+++ b/services.html
@@ -182,6 +182,11 @@
                     </div>
 
                     <div class="award-item">
+                        <span class="small">ACM SIGSOFT International Symposium on Software Testing and Analysis (ISSTA)</span>
+                        <span class="small"><span style="color: #e67e22; font-weight: 600;">2026</span></span>
+                    </div>
+
+                    <div class="award-item">
                         <span class="small">IEEE/ACM International Conference on Mining Software Repositories (MSR)</span>
                         <span class="small">2022, 2023, 2024, 2025, <span style="color: #e67e22; font-weight: 600;">2026</span></span>
                     </div>
