--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <meta name="description" content="Dario Di Nucci - Assistant Professor in Software Engineering at University of Salerno, specializing in software testing, energy efficiency, and empirical software engineering research.">
+    <meta name="description"
+        content="Dario Di Nucci - Associate Professor in Software Engineering at University of Salerno, specializing in software testing, energy efficiency, and empirical software engineering research.">
     <meta name="author" content="Dario Di Nucci">
 
     <title>Dario Di Nucci</title>
@@ -27,12 +28,14 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
         <div class="container-fluid">
-            <a class="navbar-brand d-flex align-items-center justify-content-center flex-grow-1" href="index.html" aria-label="Home">
+            <a class="navbar-brand d-flex align-items-center justify-content-center flex-grow-1" href="index.html"
+                aria-label="Home">
                 <img class="rounded-circle me-2 d-block d-lg-none" src="img/profile.png" alt="Profile photo"
                     style="width: 32px; height: 32px;" width="32" height="32">
                 <span class="d-block d-lg-none">Dario Di Nucci</span>
                 <span class="d-none d-lg-block">
-                    <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.png" alt="Profile photo" width="192" height="192">
+                    <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.png"
+                        alt="Profile photo" width="192" height="192">
                 </span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -62,7 +65,8 @@
         </div>
         <span class="d-none d-lg-block text-center">
             <a href="https://orcid.org/0000-0002-3861-1902" target="orcid.widget" rel="noopener noreferrer">
-                <img class="img-fluid img-orcid mb-2 w-50" src="img/my_orcid_qrcode.png" alt="ORCID QR code" loading="lazy" />
+                <img class="img-fluid img-orcid mb-2 w-50" src="img/my_orcid_qrcode.png" alt="ORCID QR code"
+                    loading="lazy" />
             </a>
         </span>
     </nav>
@@ -94,6 +98,7 @@
                             <p class="mb-0">
                                 I am a member at large of the <a
                                     href="https://www.computer.org/volunteering/boards-and-committees/technical-activities">IEEE
+                                    Computer Society
                                     Conference Activities Committee</a>. I serve as editor for ACM Transactions on
                                 Software
                                 Engineering and Methodology and Elsevier Journal of Systems and Software. I am a program
@@ -104,8 +109,10 @@
                             </p>
 
                             <div class="contact-info mb-4">
-                                <a href="https://www.unisa.it/" target="_blank" rel="noopener noreferrer" class="d-block mb-3">
-                                    <img id="unisa-logo" src="img/unisa.png" alt="University of Salerno" loading="lazy" width="120" height="120" />
+                                <a href="https://www.unisa.it/" target="_blank" rel="noopener noreferrer"
+                                    class="d-block mb-3">
+                                    <img id="unisa-logo" src="img/unisa.png" alt="University of Salerno" loading="lazy"
+                                        width="120" height="120" />
                                 </a>
                                 <h4 class="gradient-text mb-3">Università degli Studi di Salerno</h4>
                                 <p class="text-muted mb-3">
@@ -117,31 +124,41 @@
                             <ul class="list-social-icons mb-0">
                                 <li>
                                     <a href="mailto:d.dinucci@ieee.org" title="Email" aria-label="Email">
-                                        <svg class="icon" viewBox="0 0 24 24" width="20" height="20" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true" focusable="false">
+                                        <svg class="icon" viewBox="0 0 24 24" width="20" height="20" fill="none"
+                                            stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                            stroke-linejoin="round" aria-hidden="true" focusable="false">
                                             <rect x="3" y="5" width="18" height="14" rx="2" ry="2"></rect>
                                             <polyline points="3,7 12,13 21,7"></polyline>
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="https://it.linkedin.com/pub/dario-di-nucci/44/926/654/en" target="_blank" rel="noopener noreferrer" title="LinkedIn" aria-label="LinkedIn">
-                                        <svg class="icon" viewBox="0 0 24 24" width="20" height="20" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
-                                            <path fill="currentColor" d="M20.447 20.452H17v-5.569c0-1.327-.027-3.045-1.854-3.045-1.854 0-2.137 1.447-2.137 2.943v5.671H9.455V9h3.291v1.561h.047c.458-.868 1.576-1.785 3.245-1.785 3.47 0 4.409 2.283 4.409 5.252v6.424zM5.337 7.433a2.062 2.062 0 110-4.124 2.062 2.062 0 010 4.124zM6.813 20.452H3.861V9h2.952v11.452z"/>
+                                    <a href="https://it.linkedin.com/pub/dario-di-nucci/44/926/654/en" target="_blank"
+                                        rel="noopener noreferrer" title="LinkedIn" aria-label="LinkedIn">
+                                        <svg class="icon" viewBox="0 0 24 24" width="20" height="20" aria-hidden="true"
+                                            focusable="false" xmlns="http://www.w3.org/2000/svg">
+                                            <path fill="currentColor"
+                                                d="M20.447 20.452H17v-5.569c0-1.327-.027-3.045-1.854-3.045-1.854 0-2.137 1.447-2.137 2.943v5.671H9.455V9h3.291v1.561h.047c.458-.868 1.576-1.785 3.245-1.785 3.47 0 4.409 2.283 4.409 5.252v6.424zM5.337 7.433a2.062 2.062 0 110-4.124 2.062 2.062 0 010 4.124zM6.813 20.452H3.861V9h2.952v11.452z" />
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="https://scholar.google.it/citations?user=YJqcbnIAAAAJ"
-                                        target="_blank" rel="noopener noreferrer" title="Google Scholar" aria-label="Google Scholar">
-                                        <svg class="icon" viewBox="0 0 24 24" width="20" height="20" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
-                                            <path fill="currentColor" d="M5.242 13.769L0 9.5 12 0l12 9.5-5.242 4.269C17.548 11.249 14.978 9.5 12 9.5c-2.977 0-5.548 1.748-6.758 4.269zM12 10a7 7 0 1 0 0 14 7 7 0 0 0 0-14z"/>
+                                    <a href="https://scholar.google.it/citations?user=YJqcbnIAAAAJ" target="_blank"
+                                        rel="noopener noreferrer" title="Google Scholar" aria-label="Google Scholar">
+                                        <svg class="icon" viewBox="0 0 24 24" width="20" height="20" aria-hidden="true"
+                                            focusable="false" xmlns="http://www.w3.org/2000/svg">
+                                            <path fill="currentColor"
+                                                d="M5.242 13.769L0 9.5 12 0l12 9.5-5.242 4.269C17.548 11.249 14.978 9.5 12 9.5c-2.977 0-5.548 1.748-6.758 4.269zM12 10a7 7 0 1 0 0 14 7 7 0 0 0 0-14z" />
                                         </svg>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="https://github.com/dardin88" target="_blank" rel="noopener noreferrer" title="GitHub" aria-label="GitHub">
-                                        <svg class="icon" viewBox="0 0 24 24" width="20" height="20" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg">
-                                            <path fill="currentColor" d="M12 .296a12 12 0 00-3.79 23.39c.6.11.82-.26.82-.58 0-.29-.01-1.05-.02-2.06-3.34.73-4.04-1.61-4.04-1.61-.55-1.4-1.34-1.77-1.34-1.77-1.09-.75.08-.74.08-.74 1.2.08 1.83 1.23 1.83 1.23 1.07 1.84 2.8 1.31 3.48 1 .11-.78.42-1.31.76-1.61-2.67-.3-5.47-1.34-5.47-5.95 0-1.32.47-2.39 1.23-3.24-.12-.3-.54-1.52.12-3.17 0 0 1.01-.32 3.3 1.23a11.5 11.5 0 016 0c2.28-1.55 3.3-1.23 3.3-1.23.66 1.65.24 2.87.12 3.17.76.85 1.23 1.92 1.23 3.24 0 4.62-2.8 5.65-5.48 5.95.43.37.82 1.1.82 2.22 0 1.6-.01 2.88-.01 3.27 0 .32.22.69.83.57A12 12 0 0012 .296z"/>
+                                    <a href="https://github.com/dardin88" target="_blank" rel="noopener noreferrer"
+                                        title="GitHub" aria-label="GitHub">
+                                        <svg class="icon" viewBox="0 0 24 24" width="20" height="20" aria-hidden="true"
+                                            focusable="false" xmlns="http://www.w3.org/2000/svg">
+                                            <path fill="currentColor"
+                                                d="M12 .296a12 12 0 00-3.79 23.39c.6.11.82-.26.82-.58 0-.29-.01-1.05-.02-2.06-3.34.73-4.04-1.61-4.04-1.61-.55-1.4-1.34-1.77-1.34-1.77-1.09-.75.08-.74.08-.74 1.2.08 1.83 1.23 1.83 1.23 1.07 1.84 2.8 1.31 3.48 1 .11-.78.42-1.31.76-1.61-2.67-.3-5.47-1.34-5.47-5.95 0-1.32.47-2.39 1.23-3.24-.12-.3-.54-1.52.12-3.17 0 0 1.01-.32 3.3 1.23a11.5 11.5 0 016 0c2.28-1.55 3.3-1.23 3.3-1.23.66 1.65.24 2.87.12 3.17.76.85 1.23 1.92 1.23 3.24 0 4.62-2.8 5.65-5.48 5.95.43.37.82 1.1.82 2.22 0 1.6-.01 2.88-.01 3.27 0 .32.22.69.83.57A12 12 0 0012 .296z" />
                                         </svg>
                                     </a>
                                 </li>
@@ -233,7 +250,7 @@
 
     <!-- Set current year -->
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
+        document.addEventListener('DOMContentLoaded', function () {
             const yearElement = document.getElementById('current-year');
             if (yearElement) {
                 yearElement.textContent = new Date().getFullYear();
