Update award years and comment out teaching section for Spring 2026

--- a/services.html
+++ b/services.html
@@ -203,12 +203,12 @@
 
                     <div class="award-item">
                         <span class="small">IEEE International Conference on Software Maintenance and Evolution (ICSME)</span>
-                        <span class="small">2023, 2024, <span style="color: #e67e22; font-weight: 600;">2025</span></span>
+                        <span class="small">2023, 2024, 2025,<span style="color: #e67e22; font-weight: 600;">2026</span></span>
                     </div>
 
                     <div class="award-item">
                         <span class="small">IEEE International Working Conference on Source Code Analysis and Manipulation (SCAM)</span>
-                        <span class="small">2021, 2022, 2023, <span style="color: #e67e22; font-weight: 600;">2025</span></span>
+                        <span class="small">2021, 2022, 2023, 2025</span>
                     </div>
 
                     <div class="award-item">
