--- a/teaching.html
+++ b/teaching.html
@@ -127,7 +127,7 @@
                             </div>
                         </div>
                         
-                        <div class="d-flex align-items-start justify-content-between border-bottom pb-3 mb-3">
+                        <!--<div class="d-flex align-items-start justify-content-between border-bottom pb-3 mb-3">
                             <div class="flex-grow-1">
                                 <h5 class="mb-1">International School</h5>
                                 <p class="mb-1 text-muted small">MSc in Cyber-security and Cloud Technologies • University of Salerno</p>
@@ -136,7 +136,7 @@
                             <div class="text-end">
                                 <span class="small" style="color: #e67e22; font-weight: 600;">Spring 2026</span>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
 
                     <div class="d-flex align-items-start justify-content-between">
