Update program committee memberships and refine award descriptions

--- a/services.html
+++ b/services.html
@@ -164,10 +164,10 @@
                 </div>
 
                 <div class="modern-card mb-4">
-                    <h3 class="gradient-text">Program Committee Member of International Conferences (Research Track)</h3>
+                    <h3 class="gradient-text">Program Committee Member of International Conferences (Selected Current Memberships)</h3>
                 
                     <div class="award-item">
-                        <span class="small">ACM International Conference on the Foundations of Software Engineering (FSE)</span>
+                        <span class="small">ACM International Conference on the Foundations of Software Engineering (FSE) - Research Track</span>
                         <span class="small">2024, 2025, <span style="color: #e67e22; font-weight: 600;">2026</span></span>
                     </div>
 
@@ -182,49 +182,30 @@
                     </div>
 
                     <div class="award-item">
-                        <span class="small">ACM SIGSOFT International Symposium on Software Testing and Analysis (ISSTA)</span>
+                        <span class="small">ACM SIGSOFT International Symposium on Software Testing and Analysis (ISSTA) - Research Track</span>
                         <span class="small"><span style="color: #e67e22; font-weight: 600;">2026</span></span>
                     </div>
 
                     <div class="award-item">
-                        <span class="small">IEEE/ACM International Conference on Mining Software Repositories (MSR)</span>
+                        <span class="small">IEEE/ACM International Conference on Mining Software Repositories (MSR) - Research Track</span>
                         <span class="small">2022, 2023, 2024, 2025, <span style="color: #e67e22; font-weight: 600;">2026</span></span>
                     </div>
 
                     <div class="award-item">
-                        <span class="small">IEEE International Conference on Program Comprehension (ICPC)</span>
+                        <span class="small">IEEE International Conference on Program Comprehension (ICPC) - Research Track</span>
                         <span class="small">2020, 2022, 2023, 2024, 2025, <span style="color: #e67e22; font-weight: 600;">2026</span></span>
                     </div>
 
                     <div class="award-item">
-                        <span class="small">IEEE International Conference on Software Analysis, Evolution, and Reengineering (SANER)</span>
+                        <span class="small">IEEE International Conference on Software Analysis, Evolution, and Reengineering (SANER) - Research Track</span>
                         <span class="small">2020, 2021, 2022, 2023, 2024, 2025, <span style="color: #e67e22; font-weight: 600;">2026</span></span>
                     </div>
 
                     <div class="award-item">
-                        <span class="small">IEEE International Conference on Software Maintenance and Evolution (ICSME)</span>
+                        <span class="small">IEEE International Conference on Software Maintenance and Evolution (ICSME) - Research Track</span>
                         <span class="small">2023, 2024, 2025,<span style="color: #e67e22; font-weight: 600;">2026</span></span>
                     </div>
 
-                    <div class="award-item">
-                        <span class="small">IEEE International Working Conference on Source Code Analysis and Manipulation (SCAM)</span>
-                        <span class="small">2021, 2022, 2023, 2025</span>
-                    </div>
-
-                    <div class="award-item">
-                        <span class="small">International Conference on Product-Focused Software Process Improvement (PROFES)</span>
-                        <span class="small">2023</span>
-                    </div>
-
-                    <div class="award-item">
-                        <span class="small">European Conference on Service-Oriented and Cloud Computing (ESOCC)</span>
-                        <span class="small">2023</span>
-                    </div>
-
-                    <div class="award-item">
-                        <span class="small">IEEE/ACM International Conference on Mobile Software Engineering and Systems (MOBILESoft)</span>
-                        <span class="small">2021, 2022, 2023</span>
-                    </div>
                 </div>
 
                 <div class="modern-card">
